syntax = "proto3";

package default;

option go_package = "p9t.io/skafos/pkg/proto";

message DefaultResponse {
    int32 status = 1;
}